--- a/css/style.css
+++ b/css/style.css
@@ -909,7 +909,6 @@ html, body {
     }
 
     /*Cake click pop-up*/
-
     .popup {
         display: contents;
     }
@@ -941,17 +940,6 @@ html, body {
         height: 90%;
         width: 85%;
         overflow-y: scroll;
-    }
-
-    .content img {
-        max-width: 60%;
-        width: 472.5px;
-        max-height: 90%;
-        height: auto;
-        box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
-        -webkit-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
-        -moz-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
-        margin-bottom: 25rem;
     }
 
     .popup .popupheading {
@@ -988,4 +976,91 @@ html, body {
         cursor: pointer;
     }
 
+    .content img {
+        margin: auto;
+        display: block;
+        box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        -webkit-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        -moz-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        margin-bottom: 25rem;
+    }
+
+    .content .portrait {
+        max-width: 60%;
+        width: 472.5px;
+        max-height: 90%;
+        height: auto;
+    }
+
+    .content .landscape {
+        max-width: 100%;
+        width: 800px;
+        max-height: 100%;
+        height: auto;
+    }
+
+    /*Pop-up gallery*/
+    .slideshow-container {
+        max-width: 900px;
+        position: relative;
+        margin: auto;
+    }
+
+    /* Next & previous buttons */
+    .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        padding: 15px;
+        margin-top: -22px;
+        color: rgb(0, 0, 0);
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+    }
+
+    /* The dots/bullets/indicators */
+    .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+
+    .active, .dot:hover {
+        background-color: #717171;
+    }
+
+    /* Fading animation */
+    .fade {
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+
+    @keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    /* On smaller screens, decrease text size */
+    @media only screen and (max-width: 300px) {
+        .prev, .next, .text {
+            font-size: 11px
+        }
+    }
 }
