--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ body {
 
     /*Overall style of content pages*/
     .contentContainer {
-        font-size: 23rem;
+        font-size: 20rem;
         color: #000;
         font-family: "Calibri";
         width: 90%;
@@ -349,7 +349,7 @@ body {
         color: red;
     }
 
-    .form-group #name {
+    .form-group #firstName, #lastName {
         max-width: 30%;
     }
 
@@ -479,7 +479,7 @@ body {
         height: 95%;
         width: 90%;
         font-family: "Calibri";
-        padding: 50rem 60rem;
+        padding: 75rem 25rem 50rem 25rem;
         line-height: 1.3;
         overflow-y: scroll;
     }
@@ -529,15 +529,15 @@ body {
     }
 
     .content .portrait {
-        max-width: 60%;
-        width: 472.5px;
-        max-height: 90%;
+        max-width: 100%;
+        width: auto;
+        max-height: 100%;
         height: auto;
     }
 
     .content .landscape {
         max-width: 100%;
-        width: 800px;
+        width: auto;
         max-height: 100%;
         height: auto;
     }
@@ -554,14 +554,28 @@ body {
     .next {
         cursor: pointer;
         position: absolute;
-        top: 50%;
+        top: 40%;
         padding: 15px;
-        margin-top: -22px;
         color: rgb(0, 0, 0);
         font-weight: bold;
         font-size: 18px;
         transition: 0.6s ease;
         user-select: none;
+        text-align: center;
+        width: 50rem;
+        height: 50rem;
+    }
+
+    .prev {
+        border-radius: 0 5rem 5rem 0;
+    }
+
+    .next {
+        border-radius: 5rem 0 0 5rem;
+    }
+
+    .prev:hover, .next:hover {
+        background-color: white;
     }
 
     /* Position the "next button" to the right */
@@ -582,7 +596,8 @@ body {
     }
 
     .dots {
-        text-align: center
+        text-align: center;
+        margin-bottom: 15rem;
     }
 
     .activeDot,
@@ -603,16 +618,6 @@ body {
 
         to {
             opacity: 1
-        }
-    }
-
-    /* On smaller screens, decrease text size */
-    @media only screen and (max-width: 300px) {
-
-        .prev,
-        .next,
-        .text {
-            font-size: 11px
         }
     }
 
@@ -671,7 +676,7 @@ body {
     }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
 
     /* The sidebar menu */
     .sideNav {
@@ -829,7 +834,651 @@ body {
         color: #000;
         font-family: "Calibri";
         margin-left: 300px;
-        padding: 50px 120px 0px 120px;
+        padding: 50px 50px 0px 50px;
+    }
+
+    .content {
+        max-width: 100%;
+        width: auto;
+        max-height: 100%;
+        height: auto;
+    }
+
+    .contentContainer .heading {
+        margin-top: 25rem;
+        font-size: 25rem;
+        font-weight: bold;
+    }
+
+    hr.headinglinebreak {
+        border: 0;
+        height: 1px;
+        background: #333;
+        background-image: linear-gradient(to right, #ccc, #333, #ccc);
+    }
+
+    .headinglinebreak {
+        width: 50%;
+        margin: 0 0 35rem 0;
+    }
+
+    /*Home page*/
+    .hero {
+        margin-left: 300px;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 100%;
+        height: 100%;
+        grid-template-areas:
+            "hero";
+        place-items: center;
+    }
+
+    .hero img {
+        grid-area: hero;
+        max-width: 85%;
+        width: auto;
+        max-height: 90%;
+        height: auto;
+        box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        -webkit-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        -moz-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+    }
+
+    /*About page*/
+    .abouttext {
+        text-align: left;
+        margin-top: 25rem;
+    }
+
+    .colouredvbar {
+        color: #FFA500;
+        font-weight: bold;
+    }
+
+    .ballyfinItalic {
+        font-style: italic;
+        color: #3b3b3b;
+    }
+
+    .smallSpace {
+        font-size: 5rem;
+    }
+
+    .content #aboutImg {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        grid-area: hero;
+        max-width: 50%;
+        width: 472.5px;
+        max-height: 90%;
+        height: auto;
+        box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        -webkit-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        -moz-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+    }
+
+    /*Contact page*/
+    /*.contactGrid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 0.15fr 1fr 1fr;
+        grid-template-rows: 0.5fr 0.10fr 0.80fr;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "form form . address address"
+            "form form . . ."
+            "form form . map map";
+    }*/
+
+    /*Contact page*/
+    .contactGrid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 0.05fr 0.35fr 0.05fr 0.5fr;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "form"
+            "."
+            "address"
+            "."
+            "map";
+    }
+
+    /*Address*/
+    .address {
+        grid-area: address;
+        text-align: left;
+    }
+
+    .smallPhone {
+        line-height: 60rem;
+    }
+
+    .contactTextBorder {
+        width: 100%;
+        height: 100%;
+        box-shadow: 5rem 5rem 20rem 5rem rgba(0, 0, 0, 0.3);
+        border-radius: 10rem 10rem 10rem 10rem;
+        display: flex;
+        margin-right: 0rem;
+    }
+
+    .contactText {
+        line-height: 25rem;
+        margin: auto;
+    }
+
+    /*Map*/
+    #map {
+        grid-area: map;
+        max-width: 100%;
+        max-height: 100%;
+        box-shadow: 5rem 5rem 20rem 5rem rgba(0, 0, 0, 0.3);
+        border-radius: 10rem 10rem 10rem 10rem;
+    }
+
+    /*Form*/
+    .form {
+        grid-area: form;
+    }
+
+    .contact .contactForm {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        grid-area: contactForm;
+        text-align: left;
+    }
+
+    .formContainer {
+        width: 100%;
+        max-width: 700rem;
+        padding: 20rem;
+        box-shadow: 5rem 5rem 20rem 5rem rgba(0, 0, 0, 0.3);
+        border-radius: 10rem 10rem 10rem 10rem;
+    }
+
+    .requiredStar {
+        color: red;
+    }
+
+    .form-group #firstName, #lastName {
+        max-width: 30%;
+    }
+
+    .form-group #email,
+    #confirmEmail {
+        max-width: 60%;
+    }
+
+    .form-group #mobileNumber,
+    #landlineNumber {
+        max-width: 30%;
+    }
+
+    .form-group {
+        max-width: 100%;
+        margin-top: 20rem;
+        font-size: 20rem;
+    }
+
+    .form-group input,
+    .form-group textarea {
+        width: 100%;
+        padding: 5rem;
+        font-size: 18rem;
+        border: 1rem solid #D4D4D4;
+        margin-top: 5rem;
+        background-color: #ECECEC;
+        font-family: "Calibri";
+    }
+
+    .form-group textarea {
+        resize: vertical;
+    }
+
+    .forminput {
+        border-radius: 5rem;
+    }
+
+    button[type="submit"] {
+        width: 100%;
+        border: none;
+        outline: none;
+        padding: 20px;
+        font-size: 24px;
+        border-radius: 8rem;
+        background-color: #ECECEC;
+        text-align: center;
+        cursor: pointer;
+        margin-top: 10px;
+        transition: background-color 0.3s ease;
+    }
+
+    button[type="submit"]:hover {
+        background-color: #D4D4D4;
+    }
+
+    /*Gallery pages*/
+    .galleryGrid {
+        --gap: 16px;
+        --num-cols: 4;
+        --row-height: 100px;
+
+        box-sizing: border-box;
+
+        display: grid;
+        grid-template-columns: repeat(var(--num-cols), 1fr);
+        grid-auto-rows: var(--row-height);
+        gap: var(--gap);
+    }
+
+    .galleryGrid button img,
+    video {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .image-grid-col-1 {
+        grid-column: span 1;
+    }
+
+    .image-grid-row-1 {
+        grid-row: span 1;
+    }
+
+    .image-grid-col-2 {
+        grid-column: span 2;
+    }
+
+    .image-grid-row-2 {
+        grid-row: span 2;
+    }
+
+    .image-grid-col-3 {
+        grid-column: span 3;
+    }
+
+    .image-grid-row-3 {
+        grid-row: span 3;
+    }
+
+    /*Cake click pop-up*/
+    .popup {
+        display: contents;
+    }
+
+    .popup .overlay {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100vw;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.7);
+        z-index: 1;
+        display: none;
+    }
+
+    .popup .content {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background: #fff;
+        z-index: 2;
+        text-align: left;
+        padding: 20px;
+        box-sizing: border-box;
+        font-family: "Calibri";
+        padding: 50rem 60rem;
+        line-height: 1.3;
+        height: 90%;
+        width: 85%;
+        overflow-y: scroll;
+    }
+
+    .popup .popupheading {
+        font-weight: bold;
+        margin-bottom: 25rem;
+    }
+
+    .popup .close-btn {
+        cursor: pointer;
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        width: 30px;
+        height: 30px;
+        background: #222;
+        color: #fff;
+        font-size: 25px;
+        font-weight: 600;
+        line-height: 30px;
+        text-align: center;
+        border-radius: 50%;
+    }
+
+    .popup.active .overlay {
+        display: block;
+    }
+
+    .popup.active .content {
+        transition: all 300ms ease-in-out;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popupbutton {
+        cursor: pointer;
+    }
+
+    .slides img,
+    video {
+        margin: auto;
+        display: block;
+        box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        -webkit-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        -moz-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        margin-bottom: 25rem;
+    }
+
+    .content .portrait {
+        max-width: 60%;
+        width: 472.5px;
+        max-height: 90%;
+        height: auto;
+    }
+
+    .content .landscape {
+        max-width: 100%;
+        width: 800px;
+        max-height: 100%;
+        height: auto;
+    }
+
+    /*Pop-up gallery*/
+    .slideshow-container {
+        max-width: 900px;
+        position: relative;
+        margin: auto;
+    }
+
+    /* Next & previous buttons */
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        padding: 15px;
+        margin-top: -22px;
+        color: rgb(0, 0, 0);
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+    }
+
+    /* The dots/bullets/indicators */
+    .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+
+    .dots {
+        text-align: center
+    }
+
+    .activeDot,
+    .dot:hover {
+        background-color: #717171;
+    }
+
+    /* Fading animation */
+    .fade {
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+
+    @keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    /*Wedding resources page*/
+    .weddingResourcesGrid {
+        --gap: 50px;
+        --num-cols: 2;
+        --row-height: 500px;
+
+        box-sizing: border-box;
+
+        display: grid;
+        grid-template-columns: repeat(var(--num-cols), 1fr);
+        grid-auto-rows: var(--row-height);
+        gap: var(--gap);
+    }
+
+    .squareBorder {
+        box-shadow: 5rem 5rem 20rem 5rem rgba(0, 0, 0, 0.3);
+        border-radius: 10rem 10rem 10rem 10rem;
+    }
+
+    .imageContainer {
+        width: 100%;
+        height: 70%;
+    }
+
+    .weddingResourcesGrid button {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        border-radius: 10rem 10rem 0rem 0rem;
+    }
+
+    .weddingResourcesGrid button img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+
+    .textContainer {
+        margin: auto;
+        padding: 15rem 0;
+        width: 90%;
+        height: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .weddingResourcesHeading {
+        font-size: 20rem;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+}
+
+@media only screen and (min-width: 1025px) {
+
+    /* The sidebar menu */
+    .sideNav {
+        padding: 0rem 0rem 0rem 25rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1.5fr 0.5fr;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "logo logo logo"
+            "links links links"
+            "social social social";
+        grid-area: sidebar;
+        top: 0;
+        left: 0;
+        height: 100%;
+        position: fixed;
+        z-index: 1;
+        overflow: hidden;
+        font-size: 25rem;
+        font-family: "Calibri";
+    }
+
+    .topNav {
+        display: none;
+    }
+
+    .logo {
+        grid-area: logo;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .logo img {
+        width: 100%;
+        max-width: 250px;
+        height: auto;
+    }
+
+    .links {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "home home home"
+            "about about about"
+            "weddingCakes weddingCakes weddingCakes"
+            "celebrationCakes celebrationCakes celebrationCakes"
+            "contact contact contact"
+            "weddingResources weddingResources weddingResources"
+            ". . .";
+        grid-area: links;
+    }
+
+    .links div a {
+        color: #000;
+        transition: color ease 0.60s;
+        position: relative;
+    }
+
+
+    .links div a:visited {
+        color: #000;
+    }
+
+    .links div a:hover {
+        color: #949494;
+    }
+
+    .links div a::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 2px;
+        background: currentColor;
+        transform: scaleX(0);
+        transform-origin: top;
+        transition: transform 0.3s ease-in;
+    }
+
+    .links div a:hover::after {
+        transform: scaleX(1);
+        transform-origin: top;
+    }
+
+    .home {
+        grid-area: home;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .about {
+        grid-area: about;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .weddingCakes {
+        grid-area: weddingCakes;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .celebrationCakes {
+        grid-area: celebrationCakes;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .contact {
+        grid-area: contact;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .weddingResources {
+        grid-area: weddingResources;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .social {
+        grid-area: social;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 27.5px;
+    }
+
+    .instagram {
+        grid-area: instagram;
+        width: 40rem;
+    }
+
+    .facebook {
+        grid-area: facebook;
+        width: 40rem;
+    }
+
+    /*Overall style of content pages*/
+    .contentContainer {
+        font-size: 23rem;
+        color: #000;
+        font-family: "Calibri";
+        margin-left: 300px;
+        padding: 50px 50px 0px 50px;
     }
 
     .content {
@@ -949,6 +1598,7 @@ body {
     .contactText {
         line-height: 25rem;
         margin: auto;
+        padding: 20rem;
     }
 
     /*Map*/
@@ -986,18 +1636,18 @@ body {
         color: red;
     }
 
-    .form-group #name {
-        max-width: 30%;
+    .form-group #firstName, #lastName {
+        width: 90rem;
     }
 
     .form-group #email,
     #confirmEmail {
-        max-width: 50%;
+        max-width: 320rem;
     }
 
     .form-group #mobileNumber,
     #landlineNumber {
-        max-width: 30%;
+        max-width: 190rem;
     }
 
     .form-group {
@@ -1244,16 +1894,6 @@ body {
         }
     }
 
-    /* On smaller screens, decrease text size */
-    @media only screen and (max-width: 300px) {
-
-        .prev,
-        .next,
-        .text {
-            font-size: 11px
-        }
-    }
-
     /*Wedding resources page*/
     .weddingResourcesGrid {
         --gap: 50px;
@@ -1306,14 +1946,6 @@ body {
         font-size: 25rem;
         font-weight: bold;
         cursor: pointer;
-    }
-
-    /* On smaller screens, decrease text size */
-    @media only screen and (max-width: 500px) {
-
-        .weddingResourcesHeading {
-            font-size: 11px
-        }
     }
 
 }
