--- a/css/style.css
+++ b/css/style.css
@@ -1266,8 +1266,8 @@ body {
 
     /*Wedding resources page*/
     .weddingResourcesGrid {
-        --gap: 50px;
-        --num-cols: 2;
+        --gap: 20px;
+        --num-cols: 3;
         --row-height: 500px;
 
         box-sizing: border-box;
@@ -1276,6 +1276,7 @@ body {
         grid-template-columns: repeat(var(--num-cols), 1fr);
         grid-auto-rows: var(--row-height);
         gap: var(--gap);
+        margin-top: 100rem;
     }
 
     .squareBorder {
@@ -1897,7 +1898,7 @@ body {
     /*Wedding resources page*/
     .weddingResourcesGrid {
         --gap: 50px;
-        --num-cols: 2;
+        --num-cols: 3;
         --row-height: 500px;
 
         box-sizing: border-box;
@@ -1906,6 +1907,7 @@ body {
         grid-template-columns: repeat(var(--num-cols), 1fr);
         grid-auto-rows: var(--row-height);
         gap: var(--gap);
+        margin-top: 100rem;
     }
 
     .squareBorder {
